--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "homepage": "./",
-  "name": "reactniceresume",
-  "version": "0.1.0",
+  "name": "resume",
+  "version": "0.1.1",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "anix": "^1.3.6",
-    "gh-pages": "^3.2.3",
     "jquery": "^3.6.0",
     "particles-bg": "^2.5.5",
     "react": "^17.0.1",
@@ -46,6 +45,7 @@
     ]
   },
   "devDependencies": {
-    "chokidar": "^3.5.1"
+    "chokidar": "^3.5.1",
+    "gh-pages": "^4.0.0"
   }
 }
